added meta keywords and edited description in HTML.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
             Date: 09/22/2022
             File Name: annacallies-website  -->
         <title>Anna Callies</title>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <meta name="description" content="This is the homepage for Anna Callies for LP2.">
+        <meta name="keywords" content="Anna, Callies, Creativity, HTML, CSS">
+        <meta name="description" content="This is the homepage for Anna Callies Creativity.">
 
         <link rel="stylesheet" href="style.css">
         <div>
