fixed color variables and created grid layout for footer

--- a/index.html
+++ b/index.html
@@ -88,17 +88,16 @@
                 </div>
                 <!-- text column -->
                 <div class="middle">
-                    <p>Meet me, and my bunnies, Candy and Cupcake! Click About for more information:)</p>
+                    <p>Meet me, and my bunnies, Candy and Cupcake! Click <a href="#">About</a> for more information:)</p>
                 </div>
                 <!-- Anna -->
                 <div class="right">
                     <img src="images/AnnaCallies.png" alt="image of Anna Callies" style="width: 300px; margin-right:auto; margin-left:auto; display:block">
                 </div>
         </aside>
-
         <hr>
-
         <footer class="bottom-footer">
+            <div class="upper-area">
             <div class="links-socialnetworks">
                 <ul>
                     <!-- facebook -->
@@ -155,7 +154,14 @@
                 <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
                 <!-- icon 16 -->
                 <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:right; width:25px; padding-left:5px; transform: scaleX(-1);">
-            </p>
+                </p>
+            </div>
+            <div class="references">
+                <a href="#">references for this website</a>
+            </div>
+            <div id="up-to-top">
+                <a href="#top">top of page</a>
+            </div>
         </footer>
     </body>
 </html>
