fixed footer, added references.html, style-references.css, resume.html, and style-resume.html

--- a/references.html
+++ b/references.html
@@ -3,16 +3,16 @@
     <head>
         <!-- 152-112 Web Coding Technologies
             Anna Callies
-            Assessment Info: LP2: Basic Home Page
-            Date: 09/22/2022
+            References for Website
+            Date: 10/19/2022
             File Name: annacallies-website  -->
-        <title>Anna Callies</title>
+        <title>References</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <meta name="keywords" content="Anna, Callies, Creativity, HTML, CSS">
-        <meta name="description" content="This is the homepage for Anna Callies Creativity.">
+        <meta name="description" content="This page lists the references used to create the website, Anna Callies Creativity.">
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style-references.css">
         <div>
         <!-- Link for Font Awesome icons -->
             <!-- 6.2.0 -->
@@ -39,7 +39,7 @@
             <!-- navigation bar -->
             <nav class="navigation">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Resources</a></li>
                     <li><a href="#">Portfolio</a></li>
@@ -51,50 +51,29 @@
             </nav>
         </header>
 
-        <!-- Welcome message -->
+        <!-- References -->
         <div class="title">
-            <h1 class="welcome">Welcome</h1>
+            <h1 class="welcome">References</h1>
             <div class="welcome-message">
-                <p>Welcome to my personal website! Thank you for stopping by! Here, you'll find information about me, my projects, services, resume, and portfolio.</p>
+                <p>These are the references I used to make my websites.</p>
             </div>
         </div>
 
         <!-- main body of code -->
         <main class="main-content">
-            <!-- HTML image -->
-            <img src="images/html.png" alt="image of html tag" style="float:top; width:400px; height:auto; margin-left:auto; margin-right:auto; padding-bottom:20px; display:block;">
-            <!-- Follow Me as I Learn HTML and CSS -->
-            <div class="aboutSD">
-                <h2>Follow Me as I Learn HTML and CSS</h2>
-                <p>My software development journey formally begins at <span style="color: #f4859b">Moraine Park Technical College</span>, where I learn a diverse set of Information Technology skills. I also have taken a <span style="color: #f4859b">Software Development Bootcamp</span> through UW Madison and a <span style="color:#f4859b">Python 3 Programming Course</span> through the Bridges Library System, both of which I have gained many technical skills. I am now in the first semester of my second program at MPTC (see About for my whole story), where I am enjoying a complete online-learning experience. I am currently learning about programming in Java, relational databases, fundamentals in the IT world, and coding in HTML and CSS. Watch as I learn and grow as a software developer!</p>
-            </div>
+            <ul>
+                <li>
+                    <a target="_blank" href="https://www.freepik.com/premium-vector/draw-banner-cute-bunny-easter-spring_24279556.htm">Bunny Banner by anchaleear</a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://happycoding.io/tutorials/html/images/html-3.png">HTML image by Happy Coding</a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://www.flaticon.com/free-icon/rabbit_7072016?term=rabbit&page=1&position=34&page=1&position=34&related_id=7072016" title="rabbit icons">Rabbit icons created by Dimas Anom - Flaticon</a>
+                </li>
+            </ul>
         </main>
-
-        <aside class="side-content">
-            <!-- image gallery -->
-                <div class="left">
-                    <!-- Candy -->
-                    <div class="columnA">
-                        <img src="images/Candy.jpeg" alt="gray and white rabbit" width="175px;">
-                    </div>
-                    <!-- Candy & Cupcake -->
-                    <div class="columnB">
-                        <img src="images/CandyCupcake.jpeg" alt="two cute bunnies" width="175px;">
-                    </div>
-                    <!-- Cupcake -->
-                    <div class="columnC">
-                        <img src="images/Cupcake.jpeg" alt="brown and white rabbit" width="175px;">
-                    </div>
-                </div>
-                <!-- text column -->
-                <div class="middle">
-                    <p>Meet me, and my bunnies, Candy and Cupcake! Click <a href="#">About</a> for more information:)</p>
-                </div>
-                <!-- Anna -->
-                <div class="right">
-                    <img src="images/AnnaCallies.png" alt="image of Anna Callies" style="width: 300px; margin-right:auto; margin-left:auto; display:block">
-                </div>
-        </aside>
+        <!-- footer -->
         <hr>
         <footer class="bottom-footer">
             <div class="upper-area">
@@ -157,7 +136,7 @@
                 </p>
             </div>
             <div class="references">
-                <a href="references.html">references for this website</a>
+                <a href="#">references for this website</a>
             </div>
             <div id="up-to-top">
                 <a href="#top">top of page</a>
@@ -165,19 +144,3 @@
         </footer>
     </body>
 </html>
-
-
-<!-- 
-    bunny banner
-    https://www.freepik.com/premium-vector/draw-banner-cute-bunny-easter-spring_24279556.htm  
-    by anchaleear
-
-    HTML image
-    https://www.google.com/url?sa=i&url=https%3A%2F%2Fhappycoding.io%2Ftutorials%2Fhtml%2F&psig=AOvVaw369Vr_b3_9j7gg7kBsKapD&ust=1663905791795000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCKDS-qDCp_oCFQAAAAAdAAAAABAD
-    https://happycoding.io/tutorials/html/
-
-    icon 1 - 16:
-    https://www.flaticon.com/free-icon/rabbit_7072016?term=rabbit&page=1&position=34&page=1&position=34&related_id=7072016
-    by Dimas Anom 
-    <a href="https://www.flaticon.com/free-icons/rabbit" title="rabbit icons">Rabbit icons created by Dimas Anom - Flaticon</a>
--->
