--- a/resume.html
+++ b/resume.html
@@ -3,14 +3,14 @@
     <head>
         <!-- 152-112 Web Coding Technologies
             Anna Callies
-            Assessment Info: LP2: Basic Home Page
-            Date: 09/22/2022
+            Assessment Info: LP4: Resume
+            Date: 10/19/2022
             File Name: annacallies-website  -->
-        <title>Anna Callies</title>
+        <title>Resume</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <meta name="keywords" content="Anna, Callies, Creativity, HTML, CSS">
-        <meta name="description" content="This is the homepage for Anna Callies Creativity.">
+        <meta name="keywords" content="Anna, Callies, Creativity, HTML, CSS, resume">
+        <meta name="description" content="This is the resume page for Anna Callies Creativity.">
 
         <link rel="stylesheet" href="style.css">
         <div>
