--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
