finished resume.html and style-resume.css; added photo gallery to images folder

--- a/references.html
+++ b/references.html
@@ -45,7 +45,7 @@
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#">Resume</a></li>
+                    <li><a href="resume.html">Resume</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
@@ -71,6 +71,9 @@
                 <li>
                     <a target="_blank" href="https://www.flaticon.com/free-icon/rabbit_7072016?term=rabbit&page=1&position=34&page=1&position=34&related_id=7072016" title="rabbit icons">Rabbit icons created by Dimas Anom - Flaticon</a>
                 </li>
+                <!-- <li>
+                    <a target="_blank" href="https://www.vecteezy.com/vector-art/4916039-heart-icon-vector-perfect-love-symbol-valentine-s-day-sign-emblem-isolated-on-white-background-with-shadow-flat-style-for-graphic-and-web-design-logo">Heart Icons in Resume</a>
+                </li> -->
             </ul>
         </main>
         <!-- footer -->
