--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="resume.html">Resume</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
         </header>
