--- a/references.html
+++ b/references.html
@@ -3,147 +3,153 @@
     <head>
         <!-- 152-112 Web Coding Technologies
             Anna Callies
-            References for Website
-            Date: 10/19/2022
-            File Name: annacallies-website  -->
+            Assessment Info: LP6: Final Project
+            Date: 12/16/22
+            File Name: FinalProject-WebCodingTechnologies  -->
         <title>References</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <meta name="keywords" content="Anna, Callies, Creativity, HTML, CSS">
+        <meta name="keywords" content="Anna, Callies, Creativity, HTML, CSS, References, Links ">
         <meta name="description" content="This page lists the references used to create the website, Anna Callies Creativity.">
-
-        <link rel="stylesheet" href="style-references.css">
-        <div>
+        <link rel="stylesheet" href="styles/style.css">
+        <!-- Font Links -->
+        <link href="https://fonts.cdnfonts.com/css/helvetica-neue-9" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300&display=swap" rel="stylesheet">
         <!-- Link for Font Awesome icons -->
-            <!-- 6.2.0 -->
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" >
-            <!-- 6.0.0 -->
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" >
-            <!-- 6.1.2 -->
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" >
-            <!-- 5.8.2 -->
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" integrity="sha512-rqQltXRuHxtPWhktpAZxLHUVJ3Eombn3hvk9PHjV/N5DMUYnzKPC1i3ub0mEXgFzsaZNeJcoE0YHq0j/GFsdGg==" crossorigin="anonymous" referrerpolicy="no-referrer" >
-            <!-- 5.8.1 -->
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg==" crossorigin="anonymous" referrerpolicy="no-referrer" >
-            <!-- 5.0.0 -->
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.5.0/css/all.min.css" integrity="sha512-QfDd74mlg8afgSqm3Vq2Q65e9b3xMhJB4GZ9OcHDVy1hZ6pqBJPWWnMsKDXM7NINoKqJANNGBuVRIpIJ5dogfA==" crossorigin="anonymous" referrerpolicy="no-referrer" >
-        </div>
+        <!-- 6.2.0 -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" >
+        <!-- 6.0.0 -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" >
+        <!-- 6.1.2 -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" >
+        <!-- 5.8.2 -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" integrity="sha512-rqQltXRuHxtPWhktpAZxLHUVJ3Eombn3hvk9PHjV/N5DMUYnzKPC1i3ub0mEXgFzsaZNeJcoE0YHq0j/GFsdGg==" crossorigin="anonymous" referrerpolicy="no-referrer" >
+        <!-- 5.8.1 -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg==" crossorigin="anonymous" referrerpolicy="no-referrer" >
+        <!-- 5.0.0 -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.5.0/css/all.min.css" integrity="sha512-QfDd74mlg8afgSqm3Vq2Q65e9b3xMhJB4GZ9OcHDVy1hZ6pqBJPWWnMsKDXM7NINoKqJANNGBuVRIpIJ5dogfA==" crossorigin="anonymous" referrerpolicy="no-referrer" >
     </head>
-
-    <body class="site">
-        <!-- header -->
-        <header class="top-header">
-            <div>
-                <img class="image-logo" src="logos/Logo.png" alt="official Anna Callies Creativity logo" width="300px">
-            </div>
-            <!-- navigation bar -->
-            <nav class="navigation">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Resources</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-
-        <!-- References -->
-        <div class="title">
-            <h1 class="welcome">References</h1>
-            <div class="welcome-message">
-                <p>These are the references I used to make my websites.</p>
-            </div>
+<body class="site">
+    <!-- header -->
+    <header class="top-header" style="background-image: url(images/background/bunnybanner.jpeg)">
+        <div>
+            <img class="image-logo" src="images/logos/Logo.png" alt="official Anna Callies Creativity logo">
         </div>
-
-        <!-- main body of code -->
-        <main class="main-content">
+        <!-- navigation bar -->
+        <nav class="full-navigation">
             <ul>
-                <li>
-                    <a target="_blank" href="https://www.freepik.com/premium-vector/draw-banner-cute-bunny-easter-spring_24279556.htm">Bunny Banner by anchaleear</a>
-                </li>
-                <li>
-                    <a target="_blank" href="https://happycoding.io/tutorials/html/images/html-3.png">HTML image by Happy Coding</a>
-                </li>
-                <li>
-                    <a target="_blank" href="https://www.flaticon.com/free-icon/rabbit_7072016?term=rabbit&page=1&position=34&page=1&position=34&related_id=7072016" title="rabbit icons">Rabbit icons created by Dimas Anom - Flaticon</a>
-                </li>
-                <!-- <li>
-                    <a target="_blank" href="https://www.vecteezy.com/vector-art/4916039-heart-icon-vector-perfect-love-symbol-valentine-s-day-sign-emblem-isolated-on-white-background-with-shadow-flat-style-for-graphic-and-web-design-logo">Heart Icons in Resume</a>
-                </li> -->
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="webography.html">Resources</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-        </main>
-        <!-- footer -->
-        <hr>
-        <footer class="bottom-footer">
-            <div class="upper-area">
-            <div class="links-socialnetworks">
-                <ul>
-                    <!-- facebook -->
-                    <li><a target="_blank" href="https://www.facebook.com/annacallies98/"><i class="fa-brands fa-facebook-f"> @annacalllies98 </i></a>  </li>
-                    <!-- twitter -->
-                    <li> <a target="_blank" href="https://twitter.com/annacallies98"><i class="fa-brands fa-twitter"> @annacallies98 </i></a></li>
-                    <!-- instagram -->
-                    <li><a target="_blank" href="https://www.instagram.com/annacallies/"><i class="fa-brands fa-square-instagram"> @annacallies </i></a></li>
-                    <!-- linkedin -->
-                    <li><a target="_blank" href="https://www.linkedin.com/in/annacallies98/"><i class="fa-brands fa-linkedin-in"> @annacallies98 </i></a></li>
-                    <!-- youtube -->
-                    <li><a target="_blank" href="https://www.youtube.com/channel/UCvaEscePYwTNMnP4uagm8lQ"><i class="fa-brands fa-youtube"> Anna Callies </i></a></li>
-                    <!-- github -->
-                    <li><a target="_blank" href="https://github.com/annacallies98"><i class="fa-brands fa-github"> @annacallies98 </i></a></li>
-                    <!-- discord -->
-                    <li><a target="_blank" href="https://discordapp.com/users/931042069370257438"><i class="fa-brands fa-discord"> Anna9821#2528 </i></a></li>
-                </ul>
-            </div>
-            <p>
-                <!-- icon 1 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:left; width:25px; padding-right:5px;">
-                <!-- icon 2 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
-                <!-- icon 3 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
-                <!-- icon 4 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
-                <!-- icon 5 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
-                <!-- icon 6 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
-                <!-- icon 7 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
-                <!-- icon 8 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
+        </nav>
+    </header>
 
-                <!-- copyright texts -->
-                Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script>. All rights reserved.
-
-                <!-- icon 9 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
-                <!-- icon 10 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
-                <!-- icon 11 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
-                <!-- icon 12 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
-                <!-- icon 13 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
-                <!-- icon 14 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
-                <!-- icon 15 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
-                <!-- icon 16 -->
-                <img src="images/rabbit-laying-down.png" alt="simple rabbit laying down icon" style="float:right; width:25px; padding-left:5px; transform: scaleX(-1);">
-                </p>
-            </div>
-            <div class="references">
-                <a href="#">references for this website</a>
-            </div>
-            <div id="up-to-top">
-                <a href="#top">top of page</a>
-            </div>
-        </footer>
+    <!-- References -->
+    <div class="title">
+        <h1>References</h1>
+        <p>These are the references I used to make my websites.</p>
+    </div>
+    
+    <!-- main body of code -->
+<main class="main-content">
+    <ul>
+        <li>
+            <a target="_blank" href="https://www.freepik.com/premium-vector/draw-banner-cute-bunny-easter-spring_24279556.htm">Bunny Banner by anchaleear</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://happycoding.io/tutorials/html/images/html-3.png">HTML image by Happy Coding</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://www.flaticon.com/free-icon/rabbit_7072016?term=rabbit&page=1&position=34&page=1&position=34&related_id=7072016" title="rabbit icons">Rabbit icons created by Dimas Anom - Flaticon</a>
+        </li>
+        <li>
+            <a target="_blank" href="https://play-lh.googleusercontent.com/85WnuKkqDY4gf6tndeL4_Ng5vgRk7PTfmpI4vHMIosyq6XQ7ZGDXNtYG2s0b09kJMw">HTML5 image</a>
+        </li>
+        <!-- <li>
+            <a target="_blank" href="https://www.vecteezy.com/vector-art/4916039-heart-icon-vector-perfect-love-symbol-valentine-s-day-sign-emblem-isolated-on-white-background-with-shadow-flat-style-for-graphic-and-web-design-logo">Heart Icons in Resume</a>
+        </li> -->
+    </ul>
+</main>
+<!-- footer -->
+<hr>
+<footer class="bottom-footer">
+	<div class="upper-area">
+		<div class="links-socialnetworks">
+			<ul>
+				<!-- facebook -->
+				<li><a href="https://www.facebook.com/annacallies98/" target="_blank"><i class="fa-brands fa-facebook-f">@annacalllies98</i></a></li>
+				<!-- twitter -->
+				<li><a href="https://twitter.com/annacallies98" target="_blank"><i class="fa-brands fa-twitter">@annacallies98</i></a></li>
+				<!-- instagram -->
+				<li><a href="https://www.instagram.com/annacallies/" target="_blank"><i class="fa-brands fa-square-instagram">@annacallies</i></a></li>
+				<!-- linkedin -->
+				<li><a href="https://www.linkedin.com/in/annacallies98/" target="_blank"><i class="fa-brands fa-linkedin-in">@annacallies98</i></a></li>
+				<!-- youtube -->
+				<li><a href="https://www.youtube.com/channel/UCvaEscePYwTNMnP4uagm8lQ" target="_blank"><i class="fa-brands fa-youtube">Anna Callies</i></a></li>
+				<!-- github -->
+				<li><a href="https://github.com/annacallies98" target="_blank"><i class="fa-brands fa-github">@annacallies98</i></a></li>
+				<!-- discord -->
+				<li><a href="https://discordapp.com/users/931042069370257438" target="_blank"><i class="fa-brands fa-discord">Anna9821#2528</i></a></li>
+			</ul>
+		</div>
+		<p>
+			<!-- icon 1 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:left; width:25px; padding-right:5px;">
+			<!-- icon 2 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
+			<!-- icon 3 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
+			<!-- icon 4 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
+			<!-- icon 5 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
+			<!-- icon 6 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
+			<!-- icon 7 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
+			<!-- icon 8 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:left; width:25px; padding-right:5px; padding-left:5px;">
+			<!-- copyright texts -->
+			Copyright &copy;
+			<script>
+				document.write(new Date().getFullYear());
+			</script>.
+			All rights reserved.
+			<!-- icon 9 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
+			<!-- icon 10 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
+			<!-- icon 11 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
+			<!-- icon 12 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
+			<!-- icon 13 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
+			<!-- icon 14 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
+			<!-- icon 15 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png"style="float:right; width:25px; padding-right:5px; padding-left:5px; transform: scaleX(-1);">
+			<!-- icon 16 -->
+			<img alt="simple rabbit laying down icon" src="images/rabbit-laying-down.png" style="float:right; width:25px; padding-left:5px; transform: scaleX(-1);">
+		</p>
+	</div>
+	<div class="references">
+		<a href="references.html">references for this website</a>
+	</div>
+	<div id="up-to-top">
+		<a href="#top">top of page</a>
+	</div>
+	<div id="css-validator">
+		<a target="_blank" href="https://jigsaw.w3.org/css-validator/"> <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"></a>
+	</div>
+</footer>
     </body>
 </html>
